opensearch/opensearch-dashboards.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: opensearch
  labels:
    app: opensearch-dashboards
spec:
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
    spec:
      containers:
      - name: opensearch-dashboards
        image: opensearchproject/opensearch-dashboards:latest
        resources:
          requests:
            cpu: 500m
            memory: "500Mi"
          limits:
            cpu: 1000m
            memory: "1000Mi"
        ports:
        - containerPort: 5601
          name: opensearch-ui
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: opensearch
  labels:
    app: opensearch-dashboards
spec:
  type: ClusterIP
  ports:
  - port: 5601
    protocol: TCP
    targetPort: opensearch-ui
  selector:
    app: opensearch-dashboards
