opensearch/opensearch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opensearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-master
  namespace: opensearch
spec:
  serviceName: opensearch
  replicas: 3
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - opensearch
              topologyKey: kubernetes.io/hostname
            weight: 1
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:latest
        resources:
            limits:
              cpu: "2"
              memory: "1000Mi"
            requests:
              cpu: "1"
              memory: "500Mi"
        ports:
        - containerPort: 9200
          name: rest-api
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: opensearch-data
          mountPath: /usr/share/opensearch/data
      volumes:
      - name: opensearch-data
        emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: opensearch
  namespace: opensearch
  labels:
    app: opensearch
spec:
  selector:
    app: opensearch
  type: ClusterIP
  ports:
    - port: 9200
      name: rest-api
    - port: 9300
      name: transport
---
