opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  namespace: opensearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dashboard.example.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: opensearch-dashboards
            port:
              number: 5601
